--- a/springboot-core/src/main/resources/static/login.html
+++ b/springboot-core/src/main/resources/static/login.html
@@ -16,7 +16,6 @@
   <link rel="stylesheet" href="assets/dist/css/AdminLTE.min.css">
   <!-- iCheck -->
   <link rel="stylesheet" href="assets/plugins/iCheck/square/blue.css">
-  <script   src="js/vue2.6.10.js"></script>
   <!-- Google Font -->
   <link rel="stylesheet" href="css/stylecss.css">
 </head>
@@ -51,12 +50,14 @@
 </div>
 
 <!-- jQuery 3 -->
-<script src="assets/bower_components/jquery/dist/jquery.min.js"></script>
+<script type="text/javascript" src="assets/bower_components/jquery/dist/jquery.min.js"></script>
 <!-- Bootstrap 3.3.7 -->
-<script src="assets/bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
+<script type="text/javascript" src="assets/bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
 <!-- iCheck -->
-<script src="assets/plugins/iCheck/icheck.min.js"></script>
-<script>
+<script type="text/javascript" src="assets/plugins/iCheck/icheck.min.js"></script>
+<script type="text/javascript" src="assets/vue/vue.js"></script>
+
+<script  type="text/javascript">
   $(function () {
     $('input').iCheck({
       checkboxClass: 'icheckbox_square-blue',
