--- a/springboot-core/src/main/resources/static/index.html
+++ b/springboot-core/src/main/resources/static/index.html
@@ -1,30 +1,29 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>AdminLTE 2 | Dashboard</title>
-<!-- Bootstrap 3.3.7 -->
-<link rel="stylesheet" href="assets/bower_components/bootstrap/dist/css/bootstrap.min.css">
-<!-- Font Awesome -->
-<link rel="stylesheet" href="assets/bower_components/font-awesome/css/font-awesome.min.css">
-<!-- Theme style -->
-<link rel="stylesheet" href="assets/dist/css/AdminLTE.min.css">
-<!-- AdminLTE Skins. Choose a skin from the css/skins
-     folder instead of downloading all of them to reduce the load. -->
-<link rel="stylesheet" href="assets/dist/css/skins/_all-skins.min.css">
-<!-- Date Picker -->
-<link rel="stylesheet" href="assets/bower_components/bootstrap-datepicker/dist/css/bootstrap-datepicker.min.css">
-<!-- Daterange picker -->
-<link rel="stylesheet" href="assets/bower_components/bootstrap-daterangepicker/daterangepicker.css">
-  <!--[if lt IE 9]>
-  <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
-  <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-  <![endif]-->
-
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title>练习Demo</title>
+    <!-- Bootstrap 3.3.7 -->
+    <link rel="stylesheet" href="assets/bower_components/bootstrap/dist/css/bootstrap.min.css">
+	<!-- Font Awesome -->
+	<link rel="stylesheet" href="assets/bower_components/font-awesome/css/font-awesome.min.css">
+	<!-- Theme style -->
+	<link rel="stylesheet" href="assets/dist/css/AdminLTE.min.css">
+	
+	<link rel="stylesheet" href="assets/dist/css/skins/_all-skins.min.css">
+	<!-- Date Picker -->
+	<link rel="stylesheet" href="assets/bower_components/bootstrap-datepicker/dist/css/bootstrap-datepicker.min.css">
+	<!-- Daterange picker -->
+	<link rel="stylesheet" href="assets/bower_components/bootstrap-daterangepicker/daterangepicker.css">
+    <!--[if lt IE 9]>
+    <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
+    <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+    <![endif]-->
 </head>
+
 <body class="hold-transition skin-blue sidebar-mini">
-<div class="wrapper">
+<div class="wrapper" id="body_div">
 
   <header class="main-header">
     <!-- Logo -->
@@ -32,7 +31,7 @@
       <!-- mini logo for sidebar mini 50x50 pixels -->
       <span class="logo-mini"><b>A</b>LT</span>
       <!-- logo for regular state and mobile devices -->
-      <span class="logo-lg"><b>Admin</b>LTE</span>
+      <span class="logo-lg">练习模块</span>
     </a>
     <!-- Header Navbar: style can be found in header.less -->
     <nav class="navbar navbar-static-top">
@@ -47,7 +46,7 @@
           <li class="dropdown user user-menu">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown">
               <img src="assets/dist/img/user2-160x160.jpg" class="user-image" alt="User Image">
-              <span class="hidden-xs">Alexander Pierce</span>
+              <span class="hidden-xs">登录用户</span>
             </a>
           </li>
         </ul>
@@ -55,28 +54,29 @@
     </nav>
   </header>
   <!-- Left side column. contains the logo and sidebar -->
-  <aside class="main-sidebar">
-    <!-- sidebar: style can be found in sidebar.less -->
-    <section class="sidebar">
+<aside class="main-sidebar">
+	<section class="sidebar">
       <!-- sidebar menu: : style can be found in sidebar.less -->
-      <ul class="sidebar-menu" data-widget="tree">
-        <li class="header">MAIN NAVIGATION</li>
-        <li class="active treeview">
-          <a href="#">
-            <i class="fa fa-dashboard"></i> <span>Dashboard</span>
-            <span class="pull-right-container">
-              <i class="fa fa-angle-left pull-right"></i>
-            </span>
-          </a>
-          <ul class="treeview-menu">
-            <li class="active"><a href="index.html"><i class="fa fa-circle-o"></i> Dashboard v1</a></li>
-            <li><a href="index2.html"><i class="fa fa-circle-o"></i> Dashboard v2</a></li>
-          </ul>
-        </li>
-      </ul>
-    </section>
-    <!-- /.sidebar -->
-  </aside>
+    	<ul class="sidebar-menu" data-widget="tree"  >
+        	<li class="treeview" v-for="menu in menusdatas">
+        		<a href="#">
+            		<i class="fa fa-dashboard"></i> 
+            		<span>{{menu.name}}</span>
+            		<span class="pull-right-container">
+            		<i class="fa fa-angle-left pull-right"></i>
+            		</span>
+            	</a>
+            	<ul class="treeview-menu" >
+            		<li class="active" v-for=" chlid_menu in menu.child_menu " >
+            			<a >
+            				<i class="fa fa-circle-o"></i>{{chlid_menu.name}}
+            			</a>
+            		</li>        
+            	</ul>    
+        	</li>
+    	</ul>
+	</section>
+</aside>
 
   <!-- Content Wrapper. Contains page content -->
   <div class="content-wrapper">
@@ -102,6 +102,7 @@
   <div class="control-sidebar-bg"></div>
 </div>
 </body>
+
 <!-- jQuery 3 -->
 <script src="assets/bower_components/jquery/dist/jquery.min.js"></script>
 <!-- jQuery UI 1.11.4 -->
@@ -120,4 +121,16 @@
 <!-- AdminLTE App -->
 <script src="assets/dist/js/adminlte.min.js"></script>
 <script type="text/javascript" src="assets/vue/vue.js"></script>
+<script type="text/javascript" src="js/dev.js"></script>
+<script type="text/javascript" src="js/index.js"></script>
 </html>
+
+<style>
+.skin-blue .wrapper, .skin-blue .main-sidebar, .skin-blue .left-side{
+    background-color: #255870;
+}
+* {
+    box-sizing: border-box;
+    color: beige;
+}
+</style>
