--- a/springboot-core/src/main/resources/static/index.html
+++ b/springboot-core/src/main/resources/static/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>练习Demo</title>
+    <title>练习Demo222</title>
     <!-- Bootstrap 3.3.7 -->
     <link rel="stylesheet" href="assets/bower_components/bootstrap/dist/css/bootstrap.min.css">
 	<!-- Font Awesome -->
